<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.cs240_fms_2020.Fragments.RegisterLoginFragment"
    android:id="@+id/login_fragment">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="left|fill_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/server_host_title_login"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle" />

            <EditText
                android:id="@+id/serverHostInput"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                android:text="@string/server_port_title_login" />

            <EditText
                android:id="@+id/portNumberInput"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/username_title_login"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle" />

            <EditText
                android:id="@+id/userNameInput"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/password_title_login"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/first_name_title_login"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle" />

            <EditText
                android:id="@+id/firstNameInput"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/last_name_title_login"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle" />

            <EditText
                android:id="@+id/lastNameInput"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email_title_login"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionMode.Subtitle" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <RadioGroup
                android:layout_width="181dp"
                android:layout_height="60dp"
                android:orientation="horizontal">
            <RadioButton
                    android:text="@string/male_button"
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:id="@+id/maleButton"/>
            <RadioButton
                    android:text="@string/female_button"
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:id="@+id/femaleButton"/>
        </RadioGroup>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="210dp"
                android:layout_height="60dp">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Login" />

            <Button
                android:id="@+id/registerButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Register" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>